--- a/ansible/roles/prep/tasks/standard-distros.yml
+++ b/ansible/roles/prep/tasks/standard-distros.yml
@@ -1,4 +1,3 @@
-# Ensure metadata/cache fresh
 - name: Update all packages to latest
   ansible.builtin.package:
     name: "*"
@@ -6,35 +5,51 @@
     update_cache: yes
   become: true
 
-# Fedora/RHEL group install
-- name: Install development toolchain (Fedora/RHEL)
-  ansible.builtin.dnf:
-    name: "@Development Tools"
-    state: present
-  when: ansible_facts['os_family'] == 'RedHat'
-  become: true
-
-# Ubuntu build-essential
-- name: Install development toolchain (Ubuntu)
-  ansible.builtin.apt:
-    name: build-essential
-    state: present
-    update_cache: yes
-  when: ansible_facts['os_family'] == 'Debian'
-  become: true
-
-# Common packages with per‑distro name mapping
 - name: Install common packages
   ansible.builtin.package:
-    name: "{{ common_packages }}"
+    name: "{{ item }}"
     state: present
-  vars:
-    common_packages: >-
-      {{
-        [
-          'zsh','python3','python3-pip','tmux','tmate','htop','flatpak'
-        ]
-        + ([ 'golang','nmap-ncat','net-tools' ] if ansible_facts['os_family']=='RedHat' else [])
-        + ([ 'golang-go','netcat-openbsd','net-tools' ] if ansible_facts['os_family']=='Debian' else [])
-      }}
+  loop:
+    - zsh
+    - python3
+    - python3-pip
+    - tmux
+    - tmate
+    - htop
+    - flatpak
+    - curl
+    - wget
+    - git
+    - jq
+    - yq
+    - rsync
   become: true
+
+- name: Install packages (Fedora/RHEL)
+  when: ansible_facts['os_family'] == 'RedHat'
+  block:
+    - name: Install common packages
+      ansible.builtin.dnf:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - "@Development Tools"
+        - "golang"
+        - "nmap-ncat"
+        - "net-tools"
+        - "1password-cli"
+      become: true
+
+- name: Install packages (Debian/Ubuntu)
+  when: ansible_facts['os_family'] == 'Debian'
+  block:
+    - name: Install common packages
+      ansible.builtin.apt:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - build-essential
+        - "golang-go"
+        - "netcat-openbsd"
+        - "net-tools"
+      become: true
