--- a/ansible/roles/prep/tasks/standard-distros.yml
+++ b/ansible/roles/prep/tasks/standard-distros.yml
@@ -68,5 +68,8 @@
 - name: Include 1Password Installation tasks
   ansible.builtin.include_tasks: 1password.yml
 
+- name: Include GitHub CLI Installation tasks
+  ansible.builtin.include_tasks: github-cli.yml
+
 - name: Include Visual Studio Code Installation tasks
   ansible.builtin.include_tasks: vs-code.yml
